text, return elements

--- a/www/index.htm
+++ b/www/index.htm
@@ -15,9 +15,9 @@
        <div class="row">
            <div class="mr-2"><a href="#" id="led_random">Random</a></div>
            <div class="mr-2">
-                <label class="checkbox-inline"><input type="checkbox" value="white" class="led_toggle">White</label>
-                <label class="checkbox-inline"><input type="checkbox" value="blue" class="led_toggle">Blue</label>
-                <label class="checkbox-inline"><input type="checkbox" value="yellow" class="led_toggle">Yellow</label>
+                <label class="checkbox-inline"><input type="checkbox" value="white" class="led_toggle" id="led_white">White</label>
+                <label class="checkbox-inline"><input type="checkbox" value="blue" class="led_toggle" id="led_blue">Blue</label>
+                <label class="checkbox-inline"><input type="checkbox" value="yellow" class="led_toggle" id="led_yellow">Yellow</label>
           </div>
        </div>
 
@@ -35,22 +35,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
     <script>
-        function sleep(milliseconds) {
-            return new Promise(resolve => setTimeout(resolve, milliseconds));
-        }
-
         jQuery(function() {
+            jQuery.ajax({ url: "/info" })
+                  .done(function(i) {
+                      var o = i["current_state"]["pinout"]
+                      for (k in o)
+                          jQuery("#led_"+k).attr("checked", o[k]);
+                  });
+
             jQuery("#led_random").click(function() {
-                jQuery.ajax({url: "/random"});
+                jQuery.ajax({ url: "/random" })
+                      .done(function(i) {
+                          for (k in i)
+                            jQuery("#led_"+k).attr("checked", i[k]);
+                      });
             });
         });
 
         jQuery(".led_toggle").click(function() {
-            jQuery.ajax({url: "/toggle/" + jQuery(this).val() });
+            jQuery.ajax({ url: "/toggle/" + jQuery(this).val() })
+                  .done(function(i) {
+                      for (k in i)
+                          jQuery("#led_"+k).attr("checked", i[k]);
+                  });
         });
 
         jQuery("#matrixsend").click(function() {
-            jQuery.ajax({url: "/matrix/text/" + jQuery("#matrixtext").val()});
+            jQuery.ajax({ url: "/matrix/text/", type: "POST", data: JSON.stringify({ text: jQuery("#matrixtext").val() }) });
         });
 
         jQuery("#matrixreset").click(function() {
