--- a/www/index.htm
+++ b/www/index.htm
@@ -25,7 +25,8 @@
        <h4 class="mt-3">Dot-Matrix</h4>
        <div class="row">
             <textarea class="form-control" rows="3" id="matrixtext"></textarea>
-            <a href="#" id="matrixsend">Send</a> &mdash; <a href="#" id="matrixreset">Reset</a>
+            <a href="#" id="matrixsend">Send</a> &mdash;<a href="#" id="matrixreset">Reset</a> &mdash;
+            <label for="matrixbrightness">Brightness:</label><input type="range" id="matrixbrightness" max="15" min="0", step="1" value="0">
        </div>
 
     </div>
@@ -66,6 +67,10 @@
 
         jQuery("#matrixreset").click(function() {
             jQuery.ajax({url: "/matrix/reset"});
+        });
+
+        jQuery("#matrixbrightness").change(function() {
+            jQuery.ajax({ url: "matrix/brightness/" + jQuery(this).val() });
         });
     </script>
 </body>
